- Done player coin z-index issue. - Done user coin should be move before winning pop-up open when the user reach 100.

--- a/src/main/resources/static/css/snakeAndLadder.css
+++ b/src/main/resources/static/css/snakeAndLadder.css
@@ -10,6 +10,7 @@ body {
     display: grid;
     grid-template-columns: repeat(10, 1fr);
     grid-gap: 0.5px;
+    position: relative;
 }
 
 .snakeAndLadder {
@@ -46,20 +47,17 @@ i
     -webkit-text-stroke: 2px black; /* Border thickness and color */
 }
 
-.fa-user
-{
-    z-index: 5;
+i.fa-solid.fa-user {
+    position: relative;
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+    text-align: center;
+    font-size: 24px;
+    z-index: 2;
 }
 
-i.fa-solid.fa-user {
-    position: relative; /* Needed to position the span absolutely within this element */
-    display: inline-block;
-    width: 40px; /* Adjust size as needed */
-    height: 40px; /* Adjust size as needed */
-    line-height: 40px; /* Aligns the icon vertically */
-    text-align: center; /* Aligns the content horizontally */
-    font-size: 24px; /* Adjust the icon size */
-}
 
 .user-number {
     position: absolute;
